<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.ejerciciosficheros.Ejercicio1">

    <TextView
        android:id="@+id/textViewContenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenidoEscribir"
        android:textStyle="bold"
        android:textSize="17dp"/>

    <EditText
        android:id="@+id/editTextContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewContenido"/>

    <Button
        android:id="@+id/buttonAnadirFichInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextContenido"
        android:onClick="pulsar"
        android:text="@string/anadirFichInt"/>
    <Button
        android:id="@+id/buttonAnadirFichExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextContenido"
        android:layout_toEndOf="@+id/buttonAnadirFichInt"
        android:onClick="pulsar"
        android:text="@string/anadirFichExt"/>

    <Button
        android:id="@+id/buttonLeerFichInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAnadirFichInt"
        android:onClick="pulsar"
        android:text="@string/leerFichInt"/>
    <Button
        android:id="@+id/buttonLeerFichExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAnadirFichInt"
        android:layout_toEndOf="@+id/buttonLeerFichInt"
        android:onClick="pulsar"
        android:text="@string/leerFichExt"/>
    <Button
        android:id="@+id/buttonLeerRecurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAnadirFichInt"
        android:layout_toEndOf="@+id/buttonLeerFichExt"
        android:onClick="pulsar"
        android:text="@string/leerRecurso"/>

    <Button
        android:id="@+id/buttonBorrarFichInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLeerFichInt"
        android:onClick="pulsar"
        android:text="@string/borrarFichInt"/>
    <Button
        android:id="@+id/buttonBorrarFichExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLeerFichInt"
        android:layout_toEndOf="@+id/buttonBorrarFichInt"
        android:onClick="pulsar"
        android:text="@string/borrarFichExt"/>

    <TextView
        android:id="@+id/textViewContenidoFichero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenidoFichero"
        android:layout_marginTop="5dp"
        android:layout_below="@id/buttonBorrarFichInt"
        android:textStyle="bold"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/TextViewContenidoConFichero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@id/textViewContenidoFichero"/>
</RelativeLayout>
